Removing the mspa_reader icon (aka :gun:) which was meant to indicate a lost connection to the MSPA server, but mainly just caused confusion.

--- a/chrome/README
+++ b/chrome/README
@@ -5,10 +5,9 @@ Chrome Extension
 This extension will check mspaintadventures.com once every five minutes
 to see if there are any updates.  (Currently every 5s for testing.)
 
-The default icon for the button is the classic :mspa: face.  If something
-goes wrong, it will show the classic MSPA stick figure looking at his :gun:.
-If there are updates, the icon will be a :pumpkin: and will show a count in the
-bottom corner showing how many updates have arrived.
+The default icon for the button is the classic :mspa: face.  If there are
+updates, the icon will be a :pumpkin: and will show a count in the bottom
+corner showing how many updates have arrived.
 
 Clicking the button will always take you to the last MSPA page you have read.
 This is even the case if there are updates, because it gives you context by reminding
